Fix input text color bug in dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ label {
   border: 1px solid #5D7388;
   box-shadow: 0 0 10px 0px #A1C5D1;
   background-color: #E1F5FF;
-
+  color: rgb(40,40,40);
 }
 
 #submit {
